--- a/src/styles.css
+++ b/src/styles.css
@@ -22,6 +22,16 @@
   box-sizing: border-box;
 }
 
+.mat-accent.mat-mdc-checkbox {
+    --mdc-checkbox-selected-hover-icon-color: var(--secondary-color);
+    --mdc-checkbox-selected-icon-color: var(--secondary-color);
+    --mdc-checkbox-selected-pressed-icon-color: var(--secondary-color);
+    --mdc-checkbox-selected-focus-state-layer-color: var(--secondary-color);
+    --mdc-checkbox-selected-hover-state-layer-color: var(--secondary-color);
+    --mdc-checkbox-unselected-pressed-state-layer-color: var(--secondary-color);
+    --mdc-checkbox-selected-focus-icon-color: var(--secondary-color);
+}
+
 input[type="radio"]{
   margin: 0;
 }
@@ -176,7 +186,7 @@ app-header{
     font-weight: bold;
 }
 
-label {
+label:not(.mdc-label) {
     font-weight: bold;
     color: var(--primary-color);
     font-size: var(--small-font-size);
