feat: change things to rcn

--- a/src/app/components/molecules/personas-expuestas-politicamente/personas-expuestas-politicamente.component.html
+++ b/src/app/components/molecules/personas-expuestas-politicamente/personas-expuestas-politicamente.component.html
@@ -1,15 +1,6 @@
 <app-subtitle [subtitle]="'Personas expuestas políticamente'" />
 <p>
-  Persona Expuesta Políticamente (PEP): Las personas expuestas políticamente conforme al
-  (Decreto 1674 de 2016) son los representantes legales de organizaciones internacionales y las
-  personas que gozan de reconocimiento público. Además, los individuos que desempeñan o han
-  desempeñado funciones públicas destacadas como jefes de Estado, políticos de alta jerarquía,
-  funcionarios gubernamentales, judiciales o militares de alta jerarquía, altos ejecutivos (directores y
-  gerentes) de empresas sociales, industriales y comerciales del estado y de sociedades de
-  economía mixta, unidades administrativas especiales, y funcionarios importantes de partidos
-  políticos. Las personas descritas anteriormente son PEP durante el periodo en que ocupen sus
-  cargos y durante los dos (2) años siguientes a su dejación, renuncia, despido o declaración de
-  insubsistencia del nombramiento, o de cualquier otra forma de desvinculación.
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam urna justo, imperdiet finibus semper eget, fermentum sed enim. Vestibulum efficitur placerat dapibus. Mauris viverra erat odio, sit amet bibendum felis fringilla eu. Praesent venenatis nec urna nec venenatis. Integer malesuada sollicitudin elit, ut mollis orci fermentum congue. Sed sit amet aliquet massa. In pellentesque sagittis est a lacinia. Proin in velit sit amet ipsum suscipit commodo. Cras tincidunt orci ac ipsum faucibus, eget semper turpis mollis. Aenean quis massa non dolor semper scelerisque eget tempor eros. Donec eleifend hendrerit libero ac varius. Integer ultrices euismod nisl at pharetra. Morbi vestibulum nibh metus, vel ullamcorper magna vehicula ac. Donec placerat nisl ac cursus scelerisque. Etiam a dui quam. Vestibulum accumsan facilisis viverra.
 </p>
 <app-checkbox-input
   [label]="'¿Es persona expuesta políticamente?'"
