--- a/src/app/components/organisms/vinculacion-juridica/vinculacion-juridica.component.html
+++ b/src/app/components/organisms/vinculacion-juridica/vinculacion-juridica.component.html
@@ -21,7 +21,7 @@
   />
   <app-informacion-financiera [form]="juridicaForm" />
   <app-persona-diligencia-formulario [form]="juridicaForm" />
-  <app-additional-info [lists]="lists" />
+  <!-- <app-additional-info [lists]="lists" /> -->
   <div class="row">
       <app-black-button
         [name]="'enviar formulario'"
