--- a/src/app/components/organisms/vinculacion-natural/vinculacion-natural.component.html
+++ b/src/app/components/organisms/vinculacion-natural/vinculacion-natural.component.html
@@ -15,7 +15,7 @@
   <app-acuerdo-confidencialidad [form]="naturalForm" [lists]="lists"/>
   <app-autorizacion-datos-personales />
   <app-firma [form]="naturalForm" />
-  <app-additional-info [lists]="lists" />
+  <!-- <app-additional-info [lists]="lists" /> -->
   <div class="row">
     <app-black-button
         [name]="'enviar formulario'"
